evaluate model prediction

--- a/02 - Neural Network Regression/code/03 - Evaluating a model.ipynb
+++ b/02 - Neural Network Regression/code/03 - Evaluating a model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5a6c5c95",
+   "id": "0bff7aec",
    "metadata": {},
    "source": [
     "# Evaluating a Model\n",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a56b46a9",
+   "id": "a40bd818",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f3289601",
+   "id": "e67245be",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "720f5d3a",
+   "id": "554bbcc6",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c0b6eb1d",
+   "id": "e1b2a017",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "077ba762",
+   "id": "8ed5d997",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95fa4cc2",
+   "id": "308ad22b",
    "metadata": {},
    "source": [
     "### Visualize data"
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4ee66186",
+   "id": "2231b54d",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e0a5e7a1",
+   "id": "4b3d3706",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acc8e3a9",
+   "id": "876683b6",
    "metadata": {},
    "source": [
     "### Visualize the model"
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "bc1df3f9",
+   "id": "993156f9",
    "metadata": {
     "scrolled": true
    },
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00f377d5",
+   "id": "31b4d772",
    "metadata": {},
    "source": [
     "- **Total params:** total number of parameters in the model.\n",
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fc2f0d07",
+   "id": "19f6959e",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e7ed2c1d",
+   "id": "ba99be3d",
    "metadata": {},
    "outputs": [
     {
@@ -300,16 +300,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72548e97",
+   "id": "a12b4fe1",
    "metadata": {},
    "source": [
     "### Visualize model using plot"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b071528b",
+   "metadata": {},
+   "source": [
+    "```py\n",
+    "from tensorflow.keras.utils import plot_model\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2f99da42",
+   "id": "3d0de546",
    "metadata": {},
    "outputs": [
     {
@@ -327,11 +337,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f8781b3c",
+   "execution_count": 13,
+   "id": "f524f8db",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#!pip install pydot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "acba9a88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot_model(model=model, show_shapes=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ebdb6156",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The model is built automatically by defining the input_shape\n",
+    "tf.random.set_seed(42)\n",
+    "\n",
+    "# 1. Create a model \n",
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Dense(10, input_shape=[1], name=\"input_layer\"),\n",
+    "    tf.keras.layers.Dense(1, name=\"output_layer\")\n",
+    "])\n",
+    "\n",
+    "# 2. Compile the model\n",
+    "model.compile(loss=tf.keras.losses.mae,\n",
+    "              optimizer=tf.keras.optimizers.SGD(),\n",
+    "              metrics=['mae'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f4ebfa2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " input_layer (Dense)         (None, 10)                20        \n",
+      "                                                                 \n",
+      " output_layer (Dense)        (None, 1)                 11        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 31 (124.00 Byte)\n",
+      "Trainable params: 31 (124.00 Byte)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "bd2a0efd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot_model(model=model, show_shapes=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39d34e20",
+   "metadata": {},
+   "source": [
+    "### Visualizing model's predictions\n",
+    "\n",
+    "To visualize predictions, it is a good idea to plot them against the ground truth labels. Often you'll see it as `y_test` versus `y_pred`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d0ffccd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 73ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[56.547607],\n",
+       "       [60.31745 ],\n",
+       "       [64.08729 ],\n",
+       "       [67.85713 ],\n",
+       "       [71.62697 ],\n",
+       "       [75.396805],\n",
+       "       [79.16665 ],\n",
+       "       [82.93649 ],\n",
+       "       [86.70633 ],\n",
+       "       [90.47617 ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# make some predictions\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "9639de76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(10,), dtype=int32, numpy=array([ 70,  74,  78,  82,  86,  90,  94,  98, 102, 106])>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06eb1333",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# visualize using a plotting function\n",
+    "def plot_predictions(train_data=X_train,\n",
+    "                     train_labels=y_train,\n",
+    "                     test_data=X_test,\n",
+    "                     test_labels=y_test,\n",
+    "                     predictions=y_pred\n",
+    "                    ):\n",
+    "    \"\"\"\n",
+    "    plot training data, test data and compares predictions to ground truth\n",
+    "    \"\"\"\n",
+    "    plt.figure(figsize=(10,7))\n",
+    "    # plot training data in blue\n",
+    "    plt.scatter(train_data, train_labels, c=\"b\", label=\"Training data\")\n",
+    "    # plot testing data in green"
+   ]
   }
  ],
  "metadata": {
