saving hdf5 model

--- a/02 - Neural Network Regression/code/06 - Saving Model.ipynb
+++ b/02 - Neural Network Regression/code/06 - Saving Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "95aa699b",
+   "id": "f15dccd5",
    "metadata": {},
    "source": [
     "# Saving a Model\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1a898acd",
+   "id": "f397ccbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "859d6dc0",
+   "id": "3cbf1ff8",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7334be8",
+   "id": "645cbbb5",
    "metadata": {},
    "source": [
     "**Model 4 performed best in the last training**"
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "68b42a16",
+   "id": "53b769ec",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "43132856",
+   "id": "6c7f0571",
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f128cbe8",
+   "id": "ecf610b3",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5357b617",
+   "id": "d1b2ca60",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "540d6584",
+   "id": "37834475",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "97020235",
+   "id": "4e04b2f2",
    "metadata": {},
    "outputs": [
     {
@@ -479,20 +479,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef94403a",
+   "id": "db947b91",
    "metadata": {},
    "source": [
     "## Save the model\n",
     "\n",
     "There are two formats to save a tensorflow model.\n",
     "1. **SavedModelFormat:** Model saved in this format can be restored using `tf.keras.models.load_model`\n",
-    "2. **HDF5 format:** It has the extension `.h5`"
+    "2. **HDF5 format:** It has the extension `.h5`. This format allows to store and organise large amounts of data."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "046690ce",
+   "id": "959c92c5",
    "metadata": {},
    "outputs": [
     {
@@ -518,8 +518,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "6295a11b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\AD\\AppData\\Roaming\\Python\\Python39\\site-packages\\keras\\src\\engine\\training.py:3000: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# save model in hdf5 format\n",
+    "model_4.save(\"saved_model.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d42d21e3",
+   "id": "f60ba293",
    "metadata": {},
    "outputs": [],
    "source": []
