--- a/02 - Neural Network Regression/code/06 - Saving Model.ipynb
+++ b/02 - Neural Network Regression/code/06 - Saving Model.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f15dccd5",
+   "id": "fe48b386",
    "metadata": {},
    "source": [
     "# Saving a Model\n",
     "\n",
     "Having evaluate different models and found the best one. It is neccesary to save the best performed model to avoid re-training and for future use.\n",
     "- Saving a model enables us to use it outside the trained environment (Google colab or Jupyter notebook).\n",
-    "- Hence, it can be deployed on web app or mobile app."
+    "- Hence, it can be deployed on web app or mobile app.\n",
+    "- <a href=\"#save\">Saving model</a> | <a href=\"#load\">Loading model</a>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f397ccbf",
+   "id": "d7f63eed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3cbf1ff8",
+   "id": "6848848f",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "645cbbb5",
+   "id": "71cf3cde",
    "metadata": {},
    "source": [
     "**Model 4 performed best in the last training**"
@@ -80,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "53b769ec",
+   "id": "93d61996",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6c7f0571",
+   "id": "0de7eeb3",
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ecf610b3",
+   "id": "f9c37ead",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d1b2ca60",
+   "id": "99192f0e",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "37834475",
+   "id": "6b3cc564",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4e04b2f2",
+   "id": "71e83634",
    "metadata": {},
    "outputs": [
     {
@@ -479,9 +480,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db947b91",
+   "id": "4044afe1",
    "metadata": {},
    "source": [
+    "<div id=\"save\"></div>\n",
+    "\n",
     "## Save the model\n",
     "\n",
     "There are two formats to save a tensorflow model.\n",
@@ -492,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "959c92c5",
+   "id": "2c732b26",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6295a11b",
+   "id": "d3ed08ae",
    "metadata": {},
    "outputs": [
     {
@@ -537,12 +540,306 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f60ba293",
+   "cell_type": "markdown",
+   "id": "f7fc7f6a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<div id=\"load\"></div>\n",
+    "\n",
+    "## Load the Saved model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "27acc29f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense (Dense)               (None, 20)                40        \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 1)                 21        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 61 (244.00 Byte)\n",
+      "Trainable params: 61 (244.00 Byte)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load savedModelFormat model\n",
+    "\n",
+    "loaded_model = tf.keras.models.load_model(\"saved_model\")\n",
+    "loaded_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fdd24b85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense (Dense)               (None, 20)                40        \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 1)                 21        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 61 (244.00 Byte)\n",
+      "Trainable params: 61 (244.00 Byte)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_4.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73ec56dc",
+   "metadata": {},
+   "source": [
+    "**Compare model_4 and the loaded model predictions**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b1b75a08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 66ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 70.38089 ],\n",
+       "       [ 74.40471 ],\n",
+       "       [ 78.42853 ],\n",
+       "       [ 82.45236 ],\n",
+       "       [ 86.47618 ],\n",
+       "       [ 90.500015],\n",
+       "       [ 94.523834],\n",
+       "       [ 98.54766 ],\n",
+       "       [102.57149 ],\n",
+       "       [106.595314]], dtype=float32)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "50e4a093",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 26ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 70.38089 ],\n",
+       "       [ 74.40471 ],\n",
+       "       [ 78.42853 ],\n",
+       "       [ 82.45236 ],\n",
+       "       [ 86.47618 ],\n",
+       "       [ 90.500015],\n",
+       "       [ 94.523834],\n",
+       "       [ 98.54766 ],\n",
+       "       [102.57149 ],\n",
+       "       [106.595314]], dtype=float32)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_4.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3784413b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 22ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True],\n",
+       "       [ True],\n",
+       "       [ True],\n",
+       "       [ True],\n",
+       "       [ True],\n",
+       "       [ True],\n",
+       "       [ True],\n",
+       "       [ True],\n",
+       "       [ True],\n",
+       "       [ True]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded_model.predict(X_test) == model_4.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "80f0cc37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense (Dense)               (None, 20)                40        \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 1)                 21        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 61 (244.00 Byte)\n",
+      "Trainable params: 61 (244.00 Byte)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load HDF5 format\n",
+    "\n",
+    "loaded_model_h5 = tf.keras.models.load_model(\"saved_model.h5\")\n",
+    "loaded_model_h5.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d7f198ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 23ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 70.38089 ,  74.40471 ,  78.42853 ,  82.45236 ,  86.47618 ,\n",
+       "        90.500015,  94.523834,  98.54766 , 102.57149 , 106.595314],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded_model_h5.predict(X_test).squeeze()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4f55088f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 26ms/step\n",
+      "1/1 [==============================] - 0s 24ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True],\n",
+       "       [ True],\n",
+       "       [ True],\n",
+       "       [ True],\n",
+       "       [ True],\n",
+       "       [ True],\n",
+       "       [ True],\n",
+       "       [ True],\n",
+       "       [ True],\n",
+       "       [ True]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded_model.predict(X_test) == model_4.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd94e684",
+   "metadata": {},
+   "source": [
+    "## General Exercise to reinforce Neural Network Regression model. Click <a href=\"07 - Exercise.ipynb\">here</a>"
+   ]
   }
  ],
  "metadata": {
