--- a/02 - Neural Network Regression/code/07 - Exercise.ipynb
+++ b/02 - Neural Network Regression/code/07 - Exercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5cf59e4d",
+   "id": "62299752",
    "metadata": {},
    "source": [
     "# Exercise\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3e204a70",
+   "id": "d3e63559",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "11d8ab3c",
+   "id": "b9378921",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "55533187",
+   "id": "d68ec84d",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d42fbb7b",
+   "id": "982c9064",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0e9b26cd",
+   "id": "8bb1c6bc",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0fc6df8",
+   "id": "d013d801",
    "metadata": {},
    "source": [
     "**Encode the categorical data**"
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "964e63b9",
+   "id": "8ecefa3e",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c3641aa",
+   "id": "2b2f5e6b",
    "metadata": {},
    "source": [
     "**Train & Test Split**"
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2b215885",
+   "id": "048b1dfe",
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "99d78e18",
+   "id": "15c483db",
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ae57df44",
+   "id": "d3462a03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "8c8f2440",
+   "id": "f2c02b2f",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "41e6a5c8",
+   "id": "ad0ae50e",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "7e0f5971",
+   "id": "52b8f6fa",
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "49fcb1e6",
+   "id": "2bd8c03c",
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "eac7d3ce",
+   "id": "df634ee0",
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "584eedb5",
+   "id": "16fee8ff",
    "metadata": {},
    "source": [
     "**Build the Neural Network Model**"
@@ -1136,7 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "a2edb07d",
+   "id": "b2b75a2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,7 +1158,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "636c9feb",
+   "id": "f41c7c1f",
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "a300d582",
+   "id": "ab9b4486",
    "metadata": {},
    "outputs": [
     {
@@ -1423,7 +1423,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "26117e30",
+   "id": "0d09232e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1433,7 +1433,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "2e2baa84",
+   "id": "bd7bdfe9",
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1463,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "47f4b9a5",
+   "id": "322f1f45",
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89cda84d",
+   "id": "4e7830cd",
    "metadata": {},
    "source": [
     "## Improve the model"
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "8c571226",
+   "id": "644daf0b",
    "metadata": {},
    "outputs": [
     {
@@ -1742,7 +1742,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "5b608b27",
+   "id": "b75b1078",
    "metadata": {},
    "outputs": [
     {
@@ -1771,7 +1771,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e0c3f8f",
+   "id": "a4406b99",
    "metadata": {},
    "source": [
     "**Train for 200 epochs**"
@@ -1780,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "4231a802",
+   "id": "a0fd7a70",
    "metadata": {},
    "outputs": [
     {
@@ -2225,7 +2225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfde3bd9",
+   "id": "65bc9e07",
    "metadata": {},
    "source": [
     "**Plot History**"
@@ -2234,7 +2234,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "543e33e2",
+   "id": "828ab9ab",
    "metadata": {},
    "outputs": [
     {
@@ -2267,8 +2267,298 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f232ef41",
+   "id": "f17569d5",
    "metadata": {},
+   "source": [
+    "> For how long should someone experiment?-------- Well, it depends! TensorFlow has a solution called **EarlyStopping Callback**, which is a TensorFlow component you can add to the model to stop improving at certain metric."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43fa906b",
+   "metadata": {},
+   "source": [
+    "## Preprocessing Data\n",
+    "\n",
+    "- It is done for better metrics.\n",
+    "- Normalization and Standardization\n",
+    "- **N.B:** Neural Networks tend to prefer Normalization."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "3121ef02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>children</th>\n",
+       "      <th>smoker</th>\n",
+       "      <th>region</th>\n",
+       "      <th>charges</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19</td>\n",
+       "      <td>female</td>\n",
+       "      <td>27.900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>southwest</td>\n",
+       "      <td>16884.92400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18</td>\n",
+       "      <td>male</td>\n",
+       "      <td>33.770</td>\n",
+       "      <td>1</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southeast</td>\n",
+       "      <td>1725.55230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>28</td>\n",
+       "      <td>male</td>\n",
+       "      <td>33.000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southeast</td>\n",
+       "      <td>4449.46200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>33</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.705</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northwest</td>\n",
+       "      <td>21984.47061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>32</td>\n",
+       "      <td>male</td>\n",
+       "      <td>28.880</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northwest</td>\n",
+       "      <td>3866.85520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1333</th>\n",
+       "      <td>50</td>\n",
+       "      <td>male</td>\n",
+       "      <td>30.970</td>\n",
+       "      <td>3</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northwest</td>\n",
+       "      <td>10600.54830</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1334</th>\n",
+       "      <td>18</td>\n",
+       "      <td>female</td>\n",
+       "      <td>31.920</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northeast</td>\n",
+       "      <td>2205.98080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1335</th>\n",
+       "      <td>18</td>\n",
+       "      <td>female</td>\n",
+       "      <td>36.850</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southeast</td>\n",
+       "      <td>1629.83350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1336</th>\n",
+       "      <td>21</td>\n",
+       "      <td>female</td>\n",
+       "      <td>25.800</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southwest</td>\n",
+       "      <td>2007.94500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1337</th>\n",
+       "      <td>61</td>\n",
+       "      <td>female</td>\n",
+       "      <td>29.070</td>\n",
+       "      <td>0</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>northwest</td>\n",
+       "      <td>29141.36030</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1338 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      age     sex     bmi  children smoker     region      charges\n",
+       "0      19  female  27.900         0    yes  southwest  16884.92400\n",
+       "1      18    male  33.770         1     no  southeast   1725.55230\n",
+       "2      28    male  33.000         3     no  southeast   4449.46200\n",
+       "3      33    male  22.705         0     no  northwest  21984.47061\n",
+       "4      32    male  28.880         0     no  northwest   3866.85520\n",
+       "...   ...     ...     ...       ...    ...        ...          ...\n",
+       "1333   50    male  30.970         3     no  northwest  10600.54830\n",
+       "1334   18  female  31.920         0     no  northeast   2205.98080\n",
+       "1335   18  female  36.850         0     no  southeast   1629.83350\n",
+       "1336   21  female  25.800         0     no  southwest   2007.94500\n",
+       "1337   61  female  29.070         0    yes  northwest  29141.36030\n",
+       "\n",
+       "[1338 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "insurance = pd.read_csv(\"../../data/insurance.csv\")\n",
+    "insurance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "ee2d2791",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import make_column_transformer\n",
+    "from sklearn.preprocessing import MinMaxScaler, OneHotEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "73830ab1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create column transformer\n",
+    "ct = make_column_transformer(\n",
+    "    (MinMaxScaler(), ['age','bmi','children']),\n",
+    "    (OneHotEncoder(handle_unknown='ignore'), ['sex','smoker','region'])\n",
+    ")\n",
+    "\n",
+    "# create X and y\n",
+    "X = insurance.drop('charges',axis=1)\n",
+    "y = insurance['charges']\n",
+    "\n",
+    "# Split the data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.2, random_state=42)\n",
+    "\n",
+    "# fit the column transformer to our training data\n",
+    "ct.fit(X_train)\n",
+    "\n",
+    "# transform training and test data with normalization\n",
+    "X_train_normal = ct.transform(X_train)\n",
+    "X_test_normal = ct.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "3e3a67b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age                19\n",
+       "sex            female\n",
+       "bmi              27.9\n",
+       "children            0\n",
+       "smoker            yes\n",
+       "region      southwest\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.loc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "5cccf72a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.60869565, 0.10734463, 0.4       , 1.        , 0.        ,\n",
+       "       1.        , 0.        , 0.        , 1.        , 0.        ,\n",
+       "       0.        ])"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_normal[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c051e64d",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
