added activation images

--- a/02 - Neural Network Regression/code/07 - Exercise.ipynb
+++ b/02 - Neural Network Regression/code/07 - Exercise.ipynb
@@ -2555,7 +2555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "78a2a26e",
    "metadata": {},
    "outputs": [
@@ -2614,7 +2614,161 @@
       "Epoch 25/100\n",
       "34/34 [==============================] - 0s 3ms/step - loss: 3519.6277 - mae: 3519.6277\n",
       "Epoch 26/100\n",
-      " 1/34 [..............................] - ETA: 0s - loss: 4654.2065 - mae: 4654.2065"
+      "34/34 [==============================] - 0s 3ms/step - loss: 3485.3647 - mae: 3485.3647\n",
+      "Epoch 27/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3487.9614 - mae: 3487.9614\n",
+      "Epoch 28/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3495.6428 - mae: 3495.6428\n",
+      "Epoch 29/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3493.5388 - mae: 3493.5388\n",
+      "Epoch 30/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3510.9678 - mae: 3510.9678\n",
+      "Epoch 31/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3495.2930 - mae: 3495.2930\n",
+      "Epoch 32/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3504.9473 - mae: 3504.9473\n",
+      "Epoch 33/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3500.3792 - mae: 3500.3792\n",
+      "Epoch 34/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3484.0286 - mae: 3484.0286\n",
+      "Epoch 35/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3487.9536 - mae: 3487.9536\n",
+      "Epoch 36/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3494.9128 - mae: 3494.9128\n",
+      "Epoch 37/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3491.9790 - mae: 3491.9790\n",
+      "Epoch 38/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3495.2444 - mae: 3495.2444\n",
+      "Epoch 39/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3485.4756 - mae: 3485.4756\n",
+      "Epoch 40/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3511.8064 - mae: 3511.8064\n",
+      "Epoch 41/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3495.2241 - mae: 3495.2241\n",
+      "Epoch 42/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3493.0798 - mae: 3493.0798\n",
+      "Epoch 43/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3491.6479 - mae: 3491.6479\n",
+      "Epoch 44/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3486.7043 - mae: 3486.7043\n",
+      "Epoch 45/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3479.3777 - mae: 3479.3777\n",
+      "Epoch 46/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3489.7102 - mae: 3489.7102\n",
+      "Epoch 47/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3497.5110 - mae: 3497.5110\n",
+      "Epoch 48/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3488.4177 - mae: 3488.4177\n",
+      "Epoch 49/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3503.7288 - mae: 3503.7288\n",
+      "Epoch 50/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3485.9375 - mae: 3485.9375\n",
+      "Epoch 51/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3477.0483 - mae: 3477.0483\n",
+      "Epoch 52/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3486.2266 - mae: 3486.2266\n",
+      "Epoch 53/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3483.7722 - mae: 3483.7722\n",
+      "Epoch 54/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3505.5298 - mae: 3505.5298\n",
+      "Epoch 55/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3513.0261 - mae: 3513.0261\n",
+      "Epoch 56/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3483.7104 - mae: 3483.7104\n",
+      "Epoch 57/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3486.6348 - mae: 3486.6348\n",
+      "Epoch 58/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3482.3906 - mae: 3482.3906\n",
+      "Epoch 59/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3485.5938 - mae: 3485.5938\n",
+      "Epoch 60/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3486.0356 - mae: 3486.0356\n",
+      "Epoch 61/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3493.0330 - mae: 3493.0330\n",
+      "Epoch 62/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3492.9814 - mae: 3492.9814\n",
+      "Epoch 63/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3483.1936 - mae: 3483.1936\n",
+      "Epoch 64/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3487.6482 - mae: 3487.6482\n",
+      "Epoch 65/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3483.4272 - mae: 3483.4272\n",
+      "Epoch 66/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3505.1797 - mae: 3505.1797\n",
+      "Epoch 67/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3485.6157 - mae: 3485.6157\n",
+      "Epoch 68/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3487.2754 - mae: 3487.2754\n",
+      "Epoch 69/100\n",
+      "34/34 [==============================] - 0s 4ms/step - loss: 3481.9736 - mae: 3481.9736\n",
+      "Epoch 70/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3489.3774 - mae: 3489.3774\n",
+      "Epoch 71/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3491.2625 - mae: 3491.2625\n",
+      "Epoch 72/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3491.1394 - mae: 3491.1394\n",
+      "Epoch 73/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3495.6819 - mae: 3495.6819\n",
+      "Epoch 74/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3483.4453 - mae: 3483.4453\n",
+      "Epoch 75/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3483.3015 - mae: 3483.3015\n",
+      "Epoch 76/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3485.7646 - mae: 3485.7646\n",
+      "Epoch 77/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3482.1616 - mae: 3482.1616\n",
+      "Epoch 78/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3487.8879 - mae: 3487.8879\n",
+      "Epoch 79/100\n",
+      "34/34 [==============================] - 0s 4ms/step - loss: 3487.9258 - mae: 3487.9258\n",
+      "Epoch 80/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3495.1104 - mae: 3495.1104\n",
+      "Epoch 81/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3491.8862 - mae: 3491.8862\n",
+      "Epoch 82/100\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34/34 [==============================] - 0s 3ms/step - loss: 3490.0254 - mae: 3490.0254\n",
+      "Epoch 83/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3488.2371 - mae: 3488.2371\n",
+      "Epoch 84/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3488.5901 - mae: 3488.5901\n",
+      "Epoch 85/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3482.5793 - mae: 3482.5793\n",
+      "Epoch 86/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3480.8298 - mae: 3480.8298\n",
+      "Epoch 87/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3488.3118 - mae: 3488.3118\n",
+      "Epoch 88/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3487.1284 - mae: 3487.1284\n",
+      "Epoch 89/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3485.7202 - mae: 3485.7202\n",
+      "Epoch 90/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3487.8967 - mae: 3487.8967\n",
+      "Epoch 91/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3485.6936 - mae: 3485.6936\n",
+      "Epoch 92/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3492.6689 - mae: 3492.6689\n",
+      "Epoch 93/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3487.5010 - mae: 3487.5010\n",
+      "Epoch 94/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3484.6318 - mae: 3484.6318\n",
+      "Epoch 95/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3485.4316 - mae: 3485.4316\n",
+      "Epoch 96/100\n",
+      "34/34 [==============================] - 0s 3ms/step - loss: 3489.8789 - mae: 3489.8789\n",
+      "Epoch 97/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3496.4395 - mae: 3496.4395\n",
+      "Epoch 98/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3481.7214 - mae: 3481.7214\n",
+      "Epoch 99/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3501.4932 - mae: 3501.4932\n",
+      "Epoch 100/100\n",
+      "34/34 [==============================] - 0s 2ms/step - loss: 3487.6379 - mae: 3487.6379\n"
      ]
     }
    ],
@@ -2641,7 +2795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "10477d44",
    "metadata": {},
    "outputs": [
@@ -2649,16 +2803,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9/9 [==============================] - 0s 2ms/step - loss: 2663.3333 - mae: 2663.3333\n"
+      "9/9 [==============================] - 0s 3ms/step - loss: 3170.1394 - mae: 3170.1394\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[2663.333251953125, 2663.333251953125]"
+       "[3170.139404296875, 3170.139404296875]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2668,14 +2822,6 @@
     "\n",
     "model_4.evaluate(X_test_normal, y_test)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c5b5ac58",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
